--- a/style.css
+++ b/style.css
@@ -24,6 +24,26 @@ header{
     grid-template-columns: repeat(3, 1fr);
 }
 
+article p{
+    text-align: center;
+    padding: 30px;
+}
+
 article img{
     width: 100%;
+    border-radius: 10px;
+}
+
+.main-article{
+    grid-column: span 3;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    margin-bottom: 20px;
+    border-bottom: 1px solid white;
+    padding: 40px;
+}
+
+.main-article p{
+    text-align: left;
 }
