--- a/style.css
+++ b/style.css
@@ -48,3 +48,43 @@ article img{
 .main-article p{
     text-align: left;
 }
+
+/* responsive part */
+
+/* for 980px */
+
+@media screen and (max-width: 980px) {
+    article{
+        display: grid;
+        grid-column: span 3;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        border-bottom: 1px solid white;
+    }
+    article img{
+        width: 70%;
+        margin: 40px;
+        border-radius: 10px;
+    }
+    article p{
+        text-align: left;
+    }
+}
+
+/* for 780px */
+
+@media screen and (max-width: 780px) {
+    article,
+    .main-article{
+        display: block;
+        text-align: center;
+    }
+    article img{
+        width: 50%;
+        margin: 40px;
+        border-radius: 10px;
+    }
+    article p{
+        text-align: center;
+    }
+}
